# EYAS_project

StructuredOutputs/: None_count.ipynb  fundus_descriptions.txt
backend/: README.md  docker-compose.yml  requirements.txt
backend/client/llm_client/: README.md  pyproject.toml
backend/client/llm_client/llm_client/: __init__.py
backend/client/llm_client/llm_client/api/default/: correct_api_v1_correct_post.py  generation_api_v1_generation_post.py  paraphrasing_api_v1_paraphrasing_post.py
backend/client/llm_client/llm_client/models/: __init__.py  http_validation_error.py  text_correct_in_dto.py  text_correct_in_dto_params.py  text_generation_out_dto.py  text_in_dto.py  text_in_dto_params.py  validation_error.py
backend/client/pdf_client/: README.md  pyproject.toml
backend/client/pdf_client/pdf_client/: __init__.py
backend/client/pdf_client/pdf_client/api/default/: generation_api_v1_pdf_post.py
backend/client/pdf_client/pdf_client/models/: __init__.py  pdf_in_dto.py  pdf_in_dto_params.py
backend/client/report_client/: README.md  pyproject.toml
backend/client/report_client/report_client/: __init__.py
backend/client/report_client/report_client/models/: __init__.py  boolean_parameter.py  boolean_parameter_data.py  enum_parameter.py  enum_parameter_data.py  report_deleted_out_dto.py  report_detailed_out_dto.py  report_image_type.py  report_out_dto.py  report_parameter.py  report_request_in_dto.py  report_service_status_in_dto.py  report_service_status_out_dto.py  report_status.py  report_status_type.py  report_text.py  report_update_in_dto.py  report_upload_image_in_dto.py  report_upload_image_out_dto.py  string_parameter.py  string_parameter_data.py
backend/db/: alembic.ini  pyproject.toml
backend/db/migrations/: env.py
backend/db/migrations/versions/: 09e4cc607899_add_name_to_report_params.py  31f184ea05fa_add_reporttext_table.py  3e88b86c020a_rename_report_table.py  3f45b80c5ef3_add_report_statuses.py  c701a950e445_rename_type_name_in_params.py  d9469310a5a6_add_version_to_params.py  dff672788f93_add_report_soft_deleted.py  f634e351cb33_init.py
backend/db/models/: report_models.py
backend/docker/common/: Dockerfile
backend/lib/names_lib/: README.md  pyproject.toml
backend/lib/names_lib/names_lib/: names.py
backend/service/llmsvc/: openapi.yaml  pyproject.toml
backend/service/llmsvc/llmsvc/app/: dtos.py  main.py
backend/service/llmsvc/scripts/: generate_client.py
backend/service/pdfsvc/: openapi.yaml  pyproject.toml
backend/service/pdfsvc/pdfsvc/app/: dtos.py  main.py
backend/service/pdfsvc/scripts/: generate_client.py
backend/service/reportsvc/: openapi.yaml  pyproject.toml
backend/service/reportsvc/reportsvc/app/: dtos.py  main.py
backend/service/reportsvc/scripts/: generate_client.py
frontend/src/api/: report.ts
frontend/src/redux/: report.ts
frontend/src/ui/user/: ReportWorkspace.module.scss  ReportWorkspace.tsx
llmsvc/: openapi.yaml  pyproject.toml
llmsvc/llmsvc/app/: dtos.py  main.py
models/: report_models.py  user_models.py
reportsvc/: openapi.yaml
reportsvc/reportsvc/app/: db.py  dtos.py  main.py
(+13 files in other folders)
