[tool.poetry]
name = "db"
version = "0.1.3"
description = "A module for shared models and migrations"
authors = []
packages = [
    { include = "models" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
alembic = "1.13.1"
asyncpg = "0.29.0"
sqlmodel = "0.0.16"
greenlet = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
