[tool.poetry]
name = "names_lib"
version = "0.1.0"
description = "A library for converting parameters names and values to Russian"
authors = []
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.13"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
