[tool.poetry]
name = "llmsvc"
version = "0.1.0"
description = "A service for llm"
authors = []

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
fastapi = "0.109.2"
uvicorn = "0.22.0"
gdown = "5.1.0"
openapi-python-client = "0.19.0"
PyYAML = "6.0.1"
reportlab = "4.3.1"

[tool.poetry.group.local.dependencies]
whitebox = { path = "../../lib/whitebox" }
param_lib = { path = "../../lib/param_lib" }
model_lib = { path = "../../lib/model_lib" }
report_client = { path = "../../client/report_client" }

[tool.poetry.group.local]
optional = true

[tool.poetry.scripts]
generate-client = "scripts.generate_client:main"
donwload-weights = "scripts.download_weights:main"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
